# wiimatch

./: README.rst  azure-pipelines.yml  pyproject.toml
.github/workflows/: test.yml
docs/: conf.py
