[project]
name = "wiimatch"
description = "A package for optimal \"matching\" N-dimentional image background"
authors = [
    { name = "Mihai Cara", email = "help@stsci.edu" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 3 - Alpha",
]
dependencies = [
    "numpy",
    "scipy",
]
dynamic = [
    "version",
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.license]
file = "LICENSE.txt"
content-type = "text/plain"

[project.urls]
Homepage = "https://github.com/spacetelescope/wiimatch"
homepage = "https://github.com/spacetelescope/wiimatch"

[project.optional-dependencies]
docs = [
    "numpydoc",
    "graphviz",
    "sphinx",
    "sphinx-rtd-theme",
    "stsci-rtd-theme",
    "sphinx_automodapi",
    "tomli; python_version <=\"3.11\"",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-doctestplus",
]
all = [
    "scipy",
]

[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=3.4",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
"*" = [
    "README.rst",
    "LICENSE.txt",
    "CHANGELOG.rst",
    "*.fits",
    "*.txt",
    "*.inc",
    "*.cfg",
    "*.csv",
    "*.yaml",
    "*.json",
]

[tool.build-sphinx]
source-dir = "docs"
build-dir = "docs"
all_files = "1"

[tool.distutils.upload_docs]
upload-dir = "docs/_build/html"
show-response = 1

[tool.distutils.bdist_wheel]
universal = 0

[tool.flake8]
count = true
exclude = [
    ".git,",
    "__pycache__,",
    "docs/source/conf.py,",
    "build,",
    "dist,",
]
ignore = [
    "E501,",
    "E402,",
    "F403,",
    "W504",
]
statistics = true
doctests = true
show_source = "True"

[tool.pytest.ini_options]
minversion = "2.2"
addopts = "--ignore=build"
norecursedirs = [
    "dist",
    "build",
    "docs/_build",
    ".eggs",
]
doctest_plus = "enabled"
doctest_optionflags = "NORMALIZE_WHITESPACE ELLIPSIS FLOAT_CMP"

[tool.setuptools_scm]
